; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_argv.c_argv_msg_prefix.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_argv.c_argv_msg_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv = type { i32 }
%struct.gc_arena = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"%s: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @argv_msg_prefix(i32 %0, %struct.argv* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.argv*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.gc_arena, align 4
  store i32 %0, i32* %4, align 4
  store %struct.argv* %1, %struct.argv** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = call i32 (...) @gc_new()
  %9 = getelementptr inbounds %struct.gc_arena, %struct.gc_arena* %7, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = load %struct.argv*, %struct.argv** %5, align 8
  %13 = call i32 @argv_str(%struct.argv* %12, %struct.gc_arena* %7, i32 0)
  %14 = call i32 @msg(i32 %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %11, i32 %13)
  %15 = call i32 @gc_free(%struct.gc_arena* %7)
  ret void
}

declare dso_local i32 @gc_new(...) #1

declare dso_local i32 @msg(i32, i8*, i8*, i32) #1

declare dso_local i32 @argv_str(%struct.argv*, %struct.gc_arena*, i32) #1

declare dso_local i32 @gc_free(%struct.gc_arena*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
